@@ -94,10 +94,11 @@ NEW FEATURES
 	file directive'exportClassPattern' which has the same syntax
 	as 'exportPattern'.
 
-    o 	The Rd convertor now detects and gives an error on illegal
+    o 	The Rd convertor now detects and gives a warning on illegal
 	whitespace between arguments after the first, e.g.
 	\item{foo} {some value}, including for \item, \section,
-	\tabular, \eqn and \degn.
+	\tabular, \eqn and \degn.  Previously arguments after
+	whitespace were ignored.
 
 
 DEPRECATED & DEFUNCT
